# LHCb

./: README.md
NNRunner/: GVector.h  HptEventOld.cc  HptEventOld.h  IncEvent.cc  IncEvent.h  LinkDef.h  Main.cc  Makefile  Makefile.in  NNRunner.cc  NNRunner.h  NeuralNetReader.cc  NeuralNetReader.h  README  aclocal.m4  configure  configure.ac  input.json  setup.sh  setup.sh.in
NNRunner/ccNetMaker/: GVector.h  Makefile  NeuralNetReader.cc  NeuralNetReader.h  cmdNeuralNet.cc  network.xml  pgf.xml  qcdc.xml  run_net
NNRunner/m4/: ax_boost_base.m4
decayFit/: Bs_SIG_2Gauss_BKG_Chebyshev.json  Bs_SIG_2Gauss_BKG_Gauss.json  Draw.py  README.md  RooAsymCassandra.cxx  RooAsymCassandra.h  RooAsymCassandra3.cxx  RooAsymCassandra3.h  RooCassandra.cxx  RooCassandra.h  RooCassandra3.cxx  RooCassandra3.h  RooCustomGaussModel.cxx  RooCustomGaussModel.h  RooCutCBShape.cxx  RooCutCBShape.h  RooDoubleCBShape.cxx  RooDoubleCBShape.h  RooExpGaussExp.cxx  RooExpGaussExp.h  RooIpatia.cxx  RooIpatia.h  RooIpatia2.cxx  RooIpatia2.h  RooIpatiaCommon.cxx  RooIpatiaCommon.h  decayFit.C  decayFit.h  decayFit.py  decayFitSetup.C  decayFitSetup_bestM.C  massFit.C  massFit.h  run.sh  submit.py
decayFit/examples/: Bs2JpsieePhi_MM_2CB_Chic_Psi_Lambda_Trigger_Brem2.json  MC_newBDT_brem0_SIG_GaussParam_FFT_AsymCassandra_Gauss_400.json  MC_newBDT_brem1_SIG_GaussParam_FFT_AsymCassandra_Gauss_400.json  MC_newBDT_brem2_SIG_GaussParam_FFT_AsymCassandra_Gauss_400.json
decayFit/utils/: Draw.py  Draw2.py  Draw3.py  Plotter.py  PlotterCutCB.py  PlotterDoubleCB.py  Plotter_HistPdf.py  generate.json  generateHistPdf.py
syrena/: README  setup.py
syrena/syrena/: __init__.py
tools/: FilterTree.py  FilterTreeSingleCandidates.py  SinglesSelector.C  SinglesSelector.h
